--- a/mkdocs.en.yml
+++ b/mkdocs.en.yml
@@ -1,12 +1,12 @@
 site_name: Docs
 site_description: Documentation powered by MkDocs (Material)
 
-# site_url: https://<YOUR_GITHUB_ORG>.github.io/<YOUR_REPO>/en/
+site_url: https://jiajy.github.io/product_manaul/en/
 # English site will be published under /en (set real URL when deploying)
-site_url: ""
+# site_url: ""
 
-repo_url: https://github.com/<YOUR_GITHUB_ORG>/<YOUR_REPO>
-repo_name: <YOUR_GITHUB_ORG>/<YOUR_REPO>
+repo_url: https://github.com/jiajy/product_manaul
+repo_name: jiajy/product_manaul
 edit_uri: edit/main/docs/en/
 
 # 方案 B：英文站点使用独立 docs_dir
