--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,7 @@ extra_javascript:
   - javascripts/pdf.js
   - javascripts/embed-bridge.js
   - javascripts/sidebar-search.js
+  - javascripts/edit-under-title.js
 
 plugins:
   - search
