--- a/mkdocs.en.yml
+++ b/mkdocs.en.yml
@@ -12,6 +12,9 @@ edit_uri: edit/main/docs/en/
 # 方案 B：英文站点使用独立 docs_dir
 docs_dir: docs/en
 
+# 输出为 *.html（避免依赖目录 /index.html 的自动补全）
+use_directory_urls: false
+
 # Hide Markdown inside images folders (avoid README.md in nav)
 exclude_docs: |
   **/images/**/*.md
